Suppress JVM warnings