@@ -15,6 +15,7 @@ dependencies {
 tasks {
     test {
         useJUnitPlatform()
+        jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
     }
 }
 
